# ollaAgent

./: .env.sample  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_ko.md  main.py  pyproject.toml
ollaAgent/: agent.py  config_loader.py  memory.py  ollama_client.py  permissions.py  plan_mode.py  subagent.py  tool_bash.py
tests/: conftest.py  test_agent.py  test_config_loader.py  test_memory.py  test_permissions.py  test_plan_mode.py  test_subagent.py  test_tool_bash.py
